tests/invalid/invalid_new.err_exp
invalid_new.m:024: In clause for function `nc'/1:
invalid_new.m:024:   in function result term of clause head:
invalid_new.m:024:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`new c'/1.[39;49m
invalid_new.m:024:   Invalid use of the [38;5;87m`new ' prefix[39;49m on a constructor of type
invalid_new.m:024:   `invalid_new.c'/1, which is [38;5;203mnot existentially typed.[39;49m
